Finished the header tag
Made some changes to the whole page

--- a/main.html
+++ b/main.html
@@ -2,9 +2,15 @@
     <head>
         <title>Lucas Da Silva - Portofolio</title>
         <link rel="stylesheet" type="text/css" href="style.css">
-    
     </head>
     <body>
-        
+        <header>
+            <img src="https://i.imgur.com/KvEuBiI.png" alt="Logo">
+            <h1>Lucas Da Silva</h1>
+            <p>Web Developer | Designer | Tech Enthusiast</p>
+        </header>
+        <section id="bio">
+            <h2>About me</h2>
+        </section>
     </body>
 </html>
