Finished 1st section of the page
Included about me and biography

--- a/main.html
+++ b/main.html
@@ -11,6 +11,10 @@
         </header>
         <section id="bio">
             <h2>About me</h2>
+            <p>I'm a aspiring to be a developer and solve complex problems. I like to return to the fundamentals of programming as it is wise to set a good foundatain before upskilling.</p>
+        </section>
+        <section>
+            
         </section>
     </body>
 </html>
