Finished the html part of the code
Done the second section and created a footer

--- a/main.html
+++ b/main.html
@@ -14,7 +14,13 @@
             <p>I'm a aspiring to be a developer and solve complex problems. I like to return to the fundamentals of programming as it is wise to set a good foundatain before upskilling.</p>
         </section>
         <section>
-            
+            <h2>My Work</h2>
+            <div class="project1" id="project1">Project 1</div>
+            <div class="project2" id="project2">Project 2</div>
+            <div class="project3" id="project3">Project 3</div>
         </section>
+        <footer>
+            <p>Contact me at Lucashenridev@outlook.com</p>
+        </footer>
     </body>
 </html>
