--- a/main.html
+++ b/main.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <header>
-            <img src="https://i.imgur.com/KvEuBiI.png" alt="Logo">
+            <img src="logo.png" alt="Logo">
             <h1>Lucas Da Silva</h1>
             <p>Web Developer | Designer | Tech Enthusiast</p>
         </header>
@@ -15,9 +15,9 @@
         </section>
         <section>
             <h2>My Work</h2>
-            <div class="project1" id="project1">Project 1</div>
-            <div class="project2" id="project2">Project 2</div>
-            <div class="project3" id="project3">Project 3</div>
+            <div class="project" id="project1">Project 1</div>
+            <div class="project" id="project2">Project 2</div>
+            <div class="project" id="project3">Project 3</div>
         </section>
         <footer>
             <p>Contact me at Lucashenridev@outlook.com</p>
