Finished some updates
Such as adding link to the portfolio project work images and adding images to the work project sections

--- a/main.html
+++ b/main.html
@@ -15,9 +15,17 @@
         </section>
         <section>
             <h2>My Work</h2>
-            <div class="project" id="project1">Project 1</div>
-            <div class="project" id="project2">Project 2</div>
-            <div class="project" id="project3">Project 3</div>
+            <div class="project" id="project1">
+                <a href="https://github.com/Luhen1/HTML-Personal_website">
+                    <img class="project_image"  src="work1-website.png" alt="project1">
+                </a>
+            </div>
+            <div class="project" id="project2">
+                <img class="project_image" src="work1-website.png" alt="project1">
+            </div>
+            <div class="project" id="project3">
+                <img class="project_image" src="work1-website.png" alt="project1">
+            </div>
         </section>
         <footer>
             <p>Contact me at Lucashenridev@outlook.com</p>
